<resources>
    <string name="app_name">ApplicationA</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="splash_motto">Decorate your home with nature!</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_now">Join now!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_adress">Email adress</string>
    <string name="to_login">I already have an account</string>
    <string name="sign_in">Sign in</string>
    <string name="new_guy">Are you the new guy everyone talking about?</string>
    <string name="logged_out">Oops, you logged out!</string>
    <string name="sign_up">Sign up</string>

    <string name="username_short">The given username is too short!</string>
    <string name="password_short">The given password is too short!</string>
    <string name="password_match">The given passwords are not match with eact other!</string>
    <string name="email_format">The given email adress is not valid!</string>

    <string name="error_sign_up">The given datas may not valid, or already used.</string>
    <string name="success_register">Registration completed!</string>

    <string name="error_sign_in">The given datas are invalid!</string>
    <string name="success_sign_in">Sign in completed!</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="welcome">Welcome</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="successful_cart_add">Item added to cart</string>
    <string name="error_cart_add">Sorry, the action was refused by the server. Try again!</string>
    <string name="cart_title">Cart</string>
    <string name="product_name">Name/Price</string>
    <string name="quantity">Quantity</string>
    <string name="purchase">Purchase</string>
    <string name="order_total">Order total : $</string>
</resources>