<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in_screen.SignInFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_sign_up_right_center"/>

    <TextView
        android:layout_width="0dp"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        style="@style/LoginH1"
        android:layout_marginVertical="40dp"
        android:text="@string/logged_out"
        app:layout_constraintLeft_toLeftOf="@id/linear"
        app:layout_constraintBottom_toTopOf="@id/linear"
        app:layout_constraintRight_toRightOf="@id/linear"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".7">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/LoginEditText"
            android:hint="@string/username_hint"
            android:drawableStart="@drawable/ic_username_icon" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/LoginEditText"
            android:hint="@string/password_hint"
            android:drawableStart="@drawable/ic_password_icon" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_marginVertical="20dp"
        app:layout_constraintWidth_percent=".5"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="19sp"
        android:background="@drawable/inner_shadow_button"/>

    <TextView
        android:id="@+id/new_guy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        android:text="@string/new_guy"
        style="@style/SplashScreenMotto"
        app:layout_constraintRight_toRightOf="@id/linear"
        android:gravity="start"
        android:layout_marginVertical="20dp"/>

    <Button
        android:id="@+id/to_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/linear"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintTop_toBottomOf="@id/new_guy"
        android:text="@string/join_now"
        android:textAllCaps="false"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="19sp"
        android:layout_marginVertical="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>