<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart_screen.CartFragment">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@color/primaryColor"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constrainedHeight="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart_title"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:fontFamily="@font/ubuntu_bold"/>

        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="$Price"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/ubuntu_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:background="#F5F5F5"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_name"
            android:fontFamily="@font/ubuntu_bolditalic"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:fontFamily="@font/ubuntu_bolditalic"
            android:textSize="20sp"
            android:gravity="center"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>